--- a/purchase_indonesia/views/inherit_purchase_order.xml
+++ b/purchase_indonesia/views/inherit_purchase_order.xml
@@ -188,7 +188,33 @@
               </p>
             </field>
         </record>
-
+		
+		<!-- disabling button confirm order via quotation, purchase order should be created via qcf approval -->        
+		<record model="ir.ui.view" id="inherit_purchase_order_form">
+           	<field name="name">Inherit Purchase Order Form</field>
+            <field name="model">purchase.order</field>
+           	<field name="inherit_id" ref="purchase.purchase_order_form"/>
+           	<field name="arch" type="xml">
+            	<xpath expr="//header" position="replace">
+                  	<header>
+	                    <button name="action_rfq_send" states="draft" string="Send RFQ by Email" type="object" context="{'send_rfq':True}" class="oe_highlight"/>
+	                    <button name="action_rfq_send" states="sent" string="Re-Send RFQ by Email" type="object" context="{'send_rfq':True}"/>
+	                    <button name="print_quotation" string="Print RFQ" type="object" states="draft" class="oe_highlight" groups="base.group_user"/>
+	                    <button name="print_quotation" string="Re-Print RFQ" type="object" states="sent" groups="base.group_user"/>
+	                    <button name="button_confirm" type="object" states="draft" string="Confirm Order" id="draft_confirm" invisible="1"/>
+	                    <button name="button_confirm" type="object" states="sent" string="Confirm Order" class="oe_highlight" id="bid_confirm" invisible="1"/>
+	                    <button name="button_approve" type="object" states='to approve' string="Approve Order" class="oe_highlight" groups="purchase.group_purchase_manager" invisible="1"/>
+	                    <button name="action_rfq_send" states="purchase" string="Send PO by Email" type="object" context="{'send_rfq':False}"/>
+	                    <button name="action_view_picking" string="Receive Products" type="object" attrs="{'invisible': ['|', ('state','not in', ('purchase','done')), ('picking_count', '=', 0)]}"/>
+	                    <button name="button_draft" states="cancel" string="Set to Draft" type="object" groups="purchase.group_purchase_manager" />
+	                    <button name="button_cancel" states="draft,to approve,sent,purchase" string="Cancel" type="object" groups="purchase.group_purchase_manager" />
+	                    <button name="button_done" type="object" string="Set to Done" states="purchase"
+	                        help="If a purchase order is done, you cannot modify it manually anymore. You will not be able to receive invoices anymore for this purchase order." groups="purchase.group_purchase_manager"/>
+	                    <field name="state" widget="statusbar" statusbar_visible="draft,sent,purchase,done" readonly="1" />
+	                </header>
+              	</xpath>
+          	</field>
+         </record>	        
 
     </data>
 </openerp>
