--- a/purchase_indonesia/views/inherit_purchase_tender.xml
+++ b/purchase_indonesia/views/inherit_purchase_tender.xml
@@ -186,7 +186,26 @@
                  <xpath expr="//field[@name='multiple_rfq_per_supplier']" position="replace">
                      <field name="multiple_rfq_per_supplier" invisible="1"/>
                  </xpath>
-
+                 
+              	<xpath expr="//field[@name='purchase_ids']" position="replace">
+                	<field name="purchase_ids" options="{'reload_on_button': true}">
+	                    <tree string="Purchase Order">
+	                        <field name="name" string="Reference"/>
+	                        <field name="date_order" string="Order Date"/>
+	                        <field name="partner_id"/>
+	                        <field name="company_id" groups="base.group_multi_company" options="{'no_create': True}"/>
+	                        <field name="dest_address_id" groups="stock.group_locations"/>
+	                        <field name="date_planned" invisible="1"/>
+	                        <field name="origin"/>
+	                        <field name="state"/>
+	                        <button name="button_cancel" states="draft,sent,to approve,purchase" string="Cancel Purchase Order" type="object" icon="fa-times" groups="purchase.group_purchase_manager" />
+	                        <button name="button_confirm" states="draft" string="Confirm Purchase Order" type="object" icon="fa-check" invisible="1"/>
+	                        <button name="button_approve" states="to approve" string="Approved by Vendor" type="object" icon="fa-check-square-o" invisible="1"/>
+	                        <button name="action_rfq_send" states="draft" string="Send RFQ by Email" type="object" context="{'send_rfq':True}" icon="fa-envelope-o"/>
+	                    </tree>
+	                </field>
+              	</xpath>
+				
              </field>
          </record>
 
