[ADD] estate, estate_payroll, estate_account: general account’s productivity
* #688 - journal items has no productivity.
* #702 - payable account productivity.
* Fix multiple uom of activities in a single general account.

[ADD] estate_payroll:

* Payslip calculation error create uncomplete journal items.

[FIX] estate: #701 - master data tahun tanam

* Duplicate planted year master data.
* Make sure to run sql script at #701.

--- a/estate/views/estate_activity_view.xml
+++ b/estate/views/estate_activity_view.xml
@@ -32,7 +32,7 @@
                     <field name="qty_base" string="Std. Qty./Day"/>
                     <field name="standard_price" digits="[16,2]"/>
                     <field name="wage_method"/>
-                    <field name="contract"/>
+                    <field name="contract" string="PR"/>
                     <!-- do not delete field below -->
                     <field name="type" invisible="True"/>
                 </tree>
