--- a/estate_account/views/inherited_account_view.xml
+++ b/estate_account/views/inherited_account_view.xml
@@ -9,7 +9,38 @@
                 <xpath expr="//tree" position="attributes">
                     <attribute name="default_order">debit desc, account_id asc</attribute>
                 </xpath>
+                <!--manual update quantity-->
+                <xpath expr="//button[@name='post']" position="before">
+                    <button name="action_journal_productivity" type="object" string="Update Quantity"/>
+                </xpath>
+                <!--estate account required to see quantity uom-->
+
             </field>
         </record>
+
+        <!--estate account required to view move line's quantity uom-->
+        <record id="inherited_account_move_line_form" model="ir.ui.view">
+            <field name="name">account.move.line.form.inherited</field>
+            <field name="model">account.move.line</field>
+            <field name="inherit_id" ref="account.view_move_line_form"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='quantity']" position="after">
+                    <field name="product_uom_id"/>
+                </xpath>
+            </field>
+        </record>
+
+        <!--estate account required to view analytic's unit amount uom-->
+        <record id="inherited_account_analytic_line_form" model="ir.ui.view">
+            <field name="name">account.analytic.line.form.inherited</field>
+            <field name="model">account.analytic.line</field>
+            <field name="inherit_id" ref="analytic.view_account_analytic_line_form"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='unit_amount']" position="after">
+                    <field name="product_uom_id"/>
+                </xpath>
+            </field>
+        </record>
+
     </data>
 </openerp>
