--- a/estate_account/views/inherited_estate_activity_view.xml
+++ b/estate_account/views/inherited_estate_activity_view.xml
@@ -7,9 +7,23 @@
             <field name="inherit_id" ref="estate.view_activity_config_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//group[@name='accounting_account']" position="inside">
-                    <field name="labour_account_id"/>
-                    <field name="material_account_id"/>
-                    <field name="other_account_id"/>
+                    <field name="is_productivity" attrs="{'invisible': [('general_account_id', '=', False)]}"/>
+                    <field name="productivity" attrs="{'invisible': [('is_productivity', '!=', True)], 'required': [('is_productivity', '=', True)]}"/>
+                    <field name="productivity_uom_id" attrs="{'invisible': [('is_productivity', '!=', True)], 'required': [('is_productivity','=', True)]}"/>
+                    <field name="rounding" attrs="{'invisible': [('is_productivity', '!=', True)], 'required': [('is_productivity', '=', True)]}"/>
+                    <field name="factor" attrs="{'invisible': [('is_productivity', '!=', True)], 'required': [('is_productivity', '=', True)]}"/>
+
+                </xpath>
+            </field>
+        </record>
+
+        <record id="inherited_view_activity_list_tree" model="ir.ui.view">
+            <field name="name">Inherited Activity Tree</field>
+            <field name="model">estate.activity</field>
+            <field name="inherit_id" ref="estate.view_activity_list_tree"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='contract']" position="after">
+                    <field name="is_productivity" string="Base"/>
                 </xpath>
             </field>
         </record>
