--- a/purchase_indonesia/views/inherit_purchase_order.xml
+++ b/purchase_indonesia/views/inherit_purchase_order.xml
@@ -78,7 +78,31 @@
                         <field name="days" string="Days Of Indent" class="oe_inline" attrs="{'readonly': [('term_of_goods','!=', 'indent')]}"/>
                         <field name="spesification" string="Spesification" invisible="1"/>
                  </xpath>
-
+                  
+                 <xpath expr="//tree//field[@name='name']" position="attributes">
+                        <attribute name="invisible">1</attribute>
+                 </xpath>
+                 
+				 <xpath expr="//tree//field[@name='product_id']" position="attributes">
+                        <attribute name="attrs">{'readonly':True}</attribute>
+                 </xpath>
+                 
+				 <xpath expr="//tree//field[@name='date_planned']" position="attributes">
+                        <attribute name="attrs">{'readonly':True}</attribute>
+                 </xpath>
+                 
+				 <xpath expr="//tree//field[@name='product_qty']" position="attributes">
+                        <attribute name="attrs">{'readonly':True}</attribute>
+                 </xpath>
+                 
+				 <xpath expr="//tree//field[@name='product_uom']" position="attributes">
+                        <attribute name="attrs">{'readonly':True}</attribute>
+                 </xpath>
+                 
+				 <xpath expr="//field[@name='order_line']//tree" position="attributes">
+				    	<attribute name="create">false</attribute>
+				    	<attribute name="delete">false</attribute>
+				 </xpath>	
              </field>
          </record>
 
