--- a/purchase_indonesia/views/quotation_comparison.xml
+++ b/purchase_indonesia/views/quotation_comparison.xml
@@ -174,8 +174,7 @@
                             <separator string="Quotation Comparison"/>
                             
                             <field name="v_quotation_comparison_line_ids" track_visibility="onchange"
-                                                       attrs="{'readonly' : ['|',('state', '=', 'done'),('state','=','reject')],
-                                                       'invisible':[('line_remarks','&gt;',5)]}"
+                                                       attrs="{'readonly' : ['|',('state', '=', 'done'),('state','=','reject')]}"
                                                     context="{'tree_view_ref' : 'purchase_indonesia.view_tree_quotation_comparison_line10',
                                                            }"/>
                             <!-- 
