--- a/purchase_indonesia/views/mail_template_purchase.xml
+++ b/purchase_indonesia/views/mail_template_purchase.xml
@@ -501,6 +501,101 @@
 	  </field>
        </record>
     </data>
+    
+    <data noupdate="0">
+        <record id="email_template_purchase_quotation_comparison_draft" model="mail.template">
+          <field name="name">Email Template Quotation Comparison Form Draft</field>
+          <field name="email_from">admin@palmagroup.co.id</field>
+          <field name="subject">[SYS] Redraft QCF Approval ${object.complete_name}</field>
+          <field name="email_to">${object.pic_id.partner_id.email}</field>
+		  <field name="email_cc">procurement.ho@palmagroup.co.id</field>
+          <field name="lang">${object.lang}</field>
+          <field name="model_id" ref="purchase_indonesia.model_quotation_comparison_form"/>
+          <field name="auto_delete" eval="True"/>
+	  <field name="body_html">
+            <![CDATA[
+	      	<style>
+             input[type="submit"]{
+	         		font-family: 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; 
+	         		box-sizing: border-box; 
+	         		font-size: 14px; 
+	         		text-decoration: none; 
+	         		color: #FFF; 
+	         		line-height: 2; 
+	         		font-weight: bold; 
+	         		text-align: center; 
+	         		cursor: pointer; 
+	         		display: inline-block; 
+	         		border-radius: 5px; 
+	         		text-transform: capitalize; 
+	         		background-color: #348eda; 
+	         		margin: 0; 
+	         		padding: 0; 
+	         		border-color: #348eda; 
+	         		border-style: solid; 
+	         		border-width: 10px 20px;
+	         	}
+    		</style>
+	      <p>Dear ${(object.pic_id.name)},<br/>
+	      <br/>
+	      You have one redraft Quotation Comparison Form ,  ${(object.complete_name)}<br/>
+
+          <br/>
+
+          <p>
+	        With Detail:
+	        <br/>
+	        Reference Purchase Tender Number,${(object.requisition_id.complete_name)},<br/>
+	        <br/>
+            Reference Purchase Request Number,${(object.requisition_id.request_id.complete_name)},<br/>
+            <br/>
+            PIC : ${(object.pic_id.name)}
+	      </p>
+
+          <br/>
+          <p>
+	      Please Follow This Step To Quotation Comparison Form:
+	      </p>
+
+	      <br/>
+
+
+	      </p>
+
+            <div class="container">
+              <p>
+                Step to Approval Quotation Comparison Form.
+              </p>
+
+   				<p>
+                	<ul>
+                  		<li>Login To ERP Palma Group : 
+               				<ul>
+                   				<li>Click Login button or click this link <a href="${(object.web_url())}/web?db=${(object.database())}#id=${(object.id)}&view_type=form&model=${(object.email_model())}" target="self">Login</a></li>
+                   				<li>Input your username</li>
+			                   	<li>Input your password</li>
+			                   	<li>Click Button Login 
+		                   			<ul style="list-style-type:circle">
+		                         		<li>If You cannot login please contact ICT Department</li>
+		                       		</ul>
+                   				</li>
+               				</ul>
+           				</li>
+                  		<li>Check Your Quotation Comparison Form Inside ERP Palma Group</li>
+                  		<li>Click Button Approve Inside Quotation Comparison Form in ERP Palma Group</li>
+                	</ul>
+              </p>
+
+            </div>
+
+              Regards,
+              <br/>
+              ${(object.company_id.name)}
+              <br/>
+	    ]]>
+	  </field>
+       </record>
+    </data>
 
     <data noupdate="0">
         <record id="email_template_stock_picking" model="mail.template">
